--- a/style.css
+++ b/style.css
@@ -188,3 +188,177 @@ img {
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* 360px */
+
+@media screen and (max-width:360px) {
+
+    .lists > li {
+        display: none;
+    }
+
+    .header-title > img {
+        width: 28.72px;
+        height: 33.52px;
+    }
+
+    .header-title > h1 {
+        width: 120px;
+        height: 27px;
+        font-size: 21.54px;
+    }
+
+    .header-title {
+        margin-left: 20px;
+        margin-top: -3px;
+
+    }
+
+    .header {
+        background-image: url("bar.png");
+        background-repeat: no-repeat;
+        background-position: top right;
+        background-size: 25px;
+        margin-top: 30px;
+        margin-right: 30px;
+        
+    }
+
+    .header-back-image {
+        margin-left: 10px;
+        margin-right: 10px;
+        width: 335px;
+        height: 498px;
+        margin-top: -55px;
+    }
+
+
+    .header-info {
+      
+        
+        width: 335px;
+        
+        margin-left: -1px;
+        height: 0px;
+        
+    }
+
+
+    .header-in {
+        margin-left: 30px;
+        
+    }
+
+    .header-in > h1{
+        font-size: 22px;
+        width: 235px;
+        height: 28px;
+        margin-top: -80px;
+       
+    }
+
+    .header-in > p {
+        font-size: 12px;
+        width: 264px;
+        height: 63px;
+        margin-top: 10px;
+    }
+
+    .formal {
+        width: 287px;
+        height: 288px;
+        margin-left: 20px;
+        margin-right: 20px;
+        margin-top: -340px;
+    }
+
+
+    .go, .date, .range {
+        width: 255px;
+        height: 52px;
+        margin-bottom: 10px;
+    }
+
+
+    .formal-info {
+        margin-left: 30px;
+        margin-top: -320px;
+        margin-right: 30px;
+    }
+
+    .but-now {
+        width: 268px;
+        height: 52px;
+       
+    }
+    
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+}
+
+
+
+
