--- a/style.css
+++ b/style.css
@@ -38,8 +38,8 @@ img {
 }
 
 .nav {
-    margin-left: 457px;
-    margin-top: 73px;
+    margin-left: 347px;
+    margin-top: 33px;
 }
 
 .orange {
@@ -78,7 +78,7 @@ img {
     width: 100%;
     height: 500px;
    
-    margin-top: 50px;
+    margin-top: -90px;
     border-radius: 14px;
     
     margin-bottom: 70px;
@@ -174,6 +174,7 @@ img {
     justify-content: center;
     border-radius: 12px;
     margin-left: 260px;
+    margin-bottom: 100px;
 }
 
 .formal-info {
@@ -185,7 +186,220 @@ img {
    
 }
 
+.popular {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 100px;
+    gap: 10px;
+    margin-bottom: 100px;
+    
+}
 
+.popular-info > h2 {
+    font-size: 38px;
+    width: 355px;
+    height: 50px;
+    margin-left: 70px;
+    font-weight: 600;
+    color: #131318;
+}
+
+.popular-info > p {
+    font-size: 16px;
+    margin-left: 70px;
+    width: 577px;
+    color: #1313188e;
+    margin-top: 35px;
+}
+
+ul {
+    margin-left: 100px;
+    width: 525px;
+    height: 52px;
+    margin-top: 35px;
+    margin-bottom: 135px;
+    color: #1313188e;
+}
+ 
+.left {
+    margin-left: 65px;
+    margin-top: 35px;
+}
+
+.popular-info {
+    margin-left: -45px;
+}
+
+.popular-image > img {
+    width: 540px;
+    height: 550px;
+
+}
+
+.popular-image  {
+    margin-left: 50px;
+}
+
+
+.destination {
+    margin-top: 100px;
+    display: flex;
+   justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    margin-bottom: 100px;
+   
+
+}
+
+.destination > h1 {
+    font-size: 35px;
+    font-weight: 700;
+    width: 478px;
+    height: 50px;
+    color: #131318;
+}
+
+.destination > p {
+    font-size: 16px;
+    color: #1313188e;
+    width: 643px;
+    height: 52px;
+    margin-top: 30px;
+    margin-bottom: 70px;
+}
+
+.mal > img {
+    width: 573px;
+    height: 300px;
+}
+
+.indo > img {
+    width: 573px;
+    height: 300px;
+}
+
+
+.mal-indo {
+    display: flex;
+    gap: 20px;
+}
+
+.mal > p {
+    position: absolute;
+    z-index: 1;
+    margin-top: 146.5px;
+    margin-left: 220px;
+    font-size: 28px;
+    font-weight: 600;
+    color: #FFFFFF;
+}
+
+.indo > p {
+    position: absolute;
+    z-index: 1;
+    margin-top: 146.5px;
+    margin-left: 220px;
+    font-size: 28px;
+    font-weight: 600;
+    color: #FFFFFF;
+}
+
+
+.sl-nm {
+    display: flex;
+    margin-top: 15px;
+    gap: 20px;
+    align-items: center;
+    justify-content: center;
+}
+
+.slk> img {
+    width: 347px;
+    height: 286px;
+}
+
+.north > img {
+    width: 474px;
+    height: 286px;
+}
+
+.kashmir > img {
+    width: 305px;
+    height: 286px;
+}
+
+.slk > p {
+    position: absolute;
+    z-index: 1;
+    margin-top: 146.5px;
+    margin-left: 120px;
+    font-size: 28px;
+    font-weight: 600;
+    color: #FFFFFF;
+}
+
+.north > p {
+    position: absolute;
+    z-index: 1;
+    margin-top: 146.5px;
+    margin-left: 140px;
+    font-size: 28px;
+    font-weight: 600;
+    color: #FFFFFF;
+}
+
+
+.kashmir > p {
+
+    position: absolute;
+    z-index: 1;
+    margin-top: 146.5px;
+    margin-left: 90px;
+    font-size: 28px;
+    font-weight: 600;
+    color: #FFFFFF;
+}
+
+
+.bd-ban {
+    display: flex;
+    gap: 20px;
+    margin-top: 15px;
+}
+
+.bds > img{
+    width:473px ;
+    height:300px ;
+}
+
+.bds > p {
+    position: absolute;
+    z-index: 1;
+    margin-top: 146.5px;
+    margin-left: 140px;
+    font-size: 28px;
+    font-weight: 600;
+    color: #FFFFFF;
+}
+
+
+.bans > img {
+    width:673px ;
+    height: 300px;
+}
+
+.bans > p {
+    position: absolute;
+    z-index: 1;
+    margin-top: 146.5px;
+    margin-left: 240px;
+    font-size: 28px;
+    font-weight: 600;
+    color: #FFFFFF;
+}
 
 
 
@@ -254,7 +468,7 @@ img {
         margin-right: 10px;
         width: 335px;
         height: 498px;
-        margin-top: -55px;
+        margin-top: -195px;
     }
 
 
@@ -316,7 +530,172 @@ img {
         height: 52px;
        
     }
-    
+
+
+    .popular {
+        flex-direction: column;
+        
+    }
+
+    .popular-image > img {
+        width: 335px;
+        height: 342px;
+    }
+    .popular-image {
+        margin-left: 5px;
+        margin-right: 5px;
+        margin-top: 10px;
+    }
+
+    .popular-info > h2 {
+        font-size: 20px;
+    }
+
+    .popular-info > p {
+        font-size: 14px;
+        width: 335px;
+        margin-top: 10px;
+      
+    }
+     .popular-info {
+        margin-left: 160px;
+     }
+
+     ul >li {
+        font-size: 14px;
+        width: 305px;
+     }
+
+     .left {
+        width: 174px;
+        height: 52px;
+        font-size: 12px;
+     }
+
+
+     .destination > h1 {
+        font-size: 18px;
+        width: 239px;
+        height: 25px;
+        margin-top: -80px;
+        margin-left: -10px;
+     }
+
+     .destination > p {
+        font-size: 14px;
+        width: 309px;
+        height: 72px;
+        margin-top: 10px;
+     }
+
+     .mal-indo {
+        flex-direction: column;
+       
+     }
+
+     .mal > img {
+        width: 335px;
+        height: 176px;
+     }
+
+     .mal > p {
+        font-size: 20px;
+        margin-top: 80px;
+        margin-left: 120px;
+     }
+     
+     
+     .indo > img {
+        width: 335px;
+        height: 176px;
+     }
+
+
+     .indo > p {
+        font-size: 20px;
+        margin-top: 80px;
+        margin-left: 120px;
+     }
+
+
+     .sl-nm {
+        flex-direction: column;
+       
+     }
+
+     .slk > img {
+        width: 335px;
+        height: 176px;
+     }
+
+     .slk > p {
+        font-size: 20px;
+        margin-top: 80px;
+        margin-left: 120px;
+     }
+     
+     
+     .north > img {
+        width: 335px;
+        height: 176px;
+     }
+
+
+     .north > p {
+        font-size: 20px;
+        margin-top: 80px;
+        margin-left: 100px;
+     }
+
+     .kashmir > img {
+        width: 335px;
+        height: 176px;
+     }
+
+
+     .kashmir > p {
+        font-size: 20px;
+        margin-top: 80px;
+        margin-left: 120px;
+     }
+
+
+     .bd-ban {
+        flex-direction: column;
+       
+     }
+
+     .bds > img {
+        width: 335px;
+        height: 176px;
+     }
+
+     .bds > p {
+        font-size: 20px;
+        margin-top: 80px;
+        margin-left: 120px;
+     }
+     
+     
+     .bans > img {
+        width: 335px;
+        height: 176px;
+     }
+
+
+     .bans > p {
+        font-size: 20px;
+        margin-top: 80px;
+        margin-left: 120px;
+     }
+
+
+
+     
+
+
+   
+     
 
 
 
