--- a/style.css
+++ b/style.css
@@ -401,7 +401,280 @@ ul {
     color: #FFFFFF;
 }
 
+.choose {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
 
+.choose > h1 {
+    width: 307px;
+    height: 50px;
+    font-size: 38px;
+    text-align: center;
+    font-weight: 600;
+    color: #131318;
+}
+
+.choose > p {
+    color: #1313188e;
+    font-size: 16px;
+    text-align: center;
+    width: 643px;
+    height: 52px;
+    margin-top: 35px;
+}
+
+
+.hand-world {
+    display: flex;
+    gap: 20px;
+    margin-top: 40px;
+    margin-bottom: 20px;
+}
+
+.hand > img {
+    width: 64px;
+    height: 64px;
+    margin-left: 20px;
+    margin-top: 20px;
+}
+
+.world > img {
+    width: 64px;
+    height: 64px;
+    margin-left: 20px;
+    margin-top: 20px;
+}
+
+.hand {
+    width: 573px;
+    height: 284px;
+    background-color: #fbb4630c;
+    border: 2px solid #fbb4632a;
+    border-radius: 12px;
+}
+
+.world, .hand, .price {
+    width: 573px;
+    height: 284px;
+}
+
+.world {
+    width: 573px;
+    height: 284px;
+    background-color: #29CEF60c;
+    border: 2px solid #29CEF62a;
+    border-radius: 12px;
+}
+
+.hand > h3 {
+    font-size: 22px;
+    font-weight: 600;
+    color: #131318;
+    margin-left: 20px;
+    margin-top: 20px;
+}
+
+.hand > p {
+    width: 486px;
+    height: 78px;
+    margin-left: 20px;
+    margin-top: 20px;
+    color: #1313188e;
+    font-size: 16px;
+}
+
+.world > h3 {
+    font-size: 22px;
+    font-weight: 600;
+    color: #131318;
+    margin-left: 20px;
+    margin-top: 20px;
+}
+
+.world > p {
+    width: 486px;
+    height: 78px;
+    margin-left: 20px;
+    margin-top: 20px;
+    color: #1313188e;
+    font-size: 16px;
+}
+
+
+
+.price > img {
+    width: 64px;
+    height: 64px;
+    margin-left: 20px;
+    margin-top: 20px;
+}
+
+.price > h3 {
+    font-size: 22px;
+    font-weight: 600;
+    color: #131318;
+    margin-left: 20px;
+    margin-top: 20px;
+}
+
+.price > p {
+    width: 486px;
+    height: 78px;
+    margin-left: 20px;
+    margin-top: 20px;
+    color: #1313188e;
+    font-size: 16px;
+}
+
+
+.price {
+    width: 573px;
+    height: 284px;
+    background-color: #E944440c;
+    border: 2px solid #E944442a;
+    border-radius: 12px;
+    margin-bottom: 100px;
+}
+
+.deals {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.deals > h1 {
+    width: 351px;
+    height: 50px;
+    font-size: 36px;
+    text-align: center;
+    font-weight: 600;
+    color: #131318;
+}
+
+.deals > p {
+    color: #1313188e;
+    font-size: 16px;
+    text-align: center;
+    width: 643px;
+    height: 52px;
+    margin-top: 30px;
+}
+
+.tour {
+    margin-top: 30px;
+    width: 579px;
+    height: 389px;
+    display: flex;
+    flex-direction: column;
+  
+
+    border-radius: 12px;
+}
+
+.tour-inform {
+    display: flex;
+    gap: 20px;
+    flex-direction: column;
+    position: absolute;
+    z-index: 1;
+    transform: translate(560px);
+    margin-top: 90px;
+}
+.tours-icon {
+    display: inline-flex;
+    gap: 20px;
+    margin-top: 25px;
+    margin-left: 35px;
+}
+
+.checked {
+    color:#FF5400;
+}
+
+.info {
+    display: flex;
+    gap: 5px;
+}
+
+.book {
+    background-color: #FF5400;
+    color: #FFFFFF;
+    text-align: center;
+    font-size: 20px;
+    width: 150px;
+    height: 52px;
+    border-radius: 12px;
+    border: 2px solid #FF5400;
+    margin-top: 25px;
+    margin-bottom: 20px;
+
+}
+
+.info > p {
+    font-size: 14px;
+    width: 111px;
+    height: 20px;
+    color: #5A5A5D;
+}
+
+.tours > h1 {
+    font-size: 24px;
+    color: #131318;
+
+}
+
+.tours > p {
+    font-size: 16px;
+    width: 452px;
+    height: 78px;
+    color: #5A5A5D;
+    margin-top: 25px;
+}
+
+
+.check {
+    color: #FF5400;
+    font-size: 20px;
+    font-weight: 600;
+    margin-top: 25px;
+}
+
+.tour > img {
+    width: 1170px;
+    height: 500px;
+}
+
+
+.tour {
+   margin-left: 80px;
+   margin-right: 80px;
+   
+}
+
+
+.tour-info {
+    margin-top: 60px;
+    border: 2px solid #FFFFFF;
+    border-radius: 12px;
+    width: 579px;
+    height: 389px;
+    position: absolute;
+    z-index: 1;
+    margin-left: 540px;
+    background-color: #FFFFFF;
+    opacity: 0.8;
+    
+    
+    
+}
+
+.tours {
+    margin-left: 35px;
+}
 
 
 
@@ -688,6 +961,166 @@ ul {
         margin-top: 80px;
         margin-left: 120px;
      }
+
+     .choose > h1 {
+        font-size: 20px;
+        margin-top: -90px;
+     }
+
+     .choose > p {
+        font-size: 14px;
+        width: 309px;
+        height: 72px;
+        margin-top: -10px;
+     }
+
+
+     .hand-world {
+        flex-direction: column;
+        margin-top: 5px;
+     }
+
+     .hand, .world, .price {
+        width: 339px;
+        height: 289px;
+     }
+
+     .hand > img {
+        width: 48px;
+        height: 48px;
+        margin-top: 10px;
+     }
+
+     .hand > h3 {
+        font-size: 20px;
+        margin-top: 10px;
+     }
+
+     .hand > p {
+        font-size: 14px;
+        width: 271px;
+        height: 120px;
+        margin-top: 10px;
+     }
+
+     .world > img {
+        width: 48px;
+        height: 48px;
+        margin-top: 10px;
+     }
+
+     .world > h3 {
+        font-size: 20px;
+        margin-top: 10px;
+     }
+
+     .world > p {
+        font-size: 14px;
+        width: 271px;
+        height: 120px;
+        margin-top: 10px;
+     }
+
+     .price > img {
+        width: 48px;
+        height: 48px;
+        margin-top: 10px;
+     }
+
+     .price > h3 {
+        font-size: 20px;
+        margin-top: 10px;
+     }
+
+     .price > p {
+        font-size: 14px;
+        width: 271px;
+        height: 120px;
+        margin-top: 10px;
+     }
+
+     .deals > h1 {
+        font-size: 20px;
+        margin-top: -80px;
+     }
+
+     .deals > p {
+        font-size: 14px;
+        width: 309px;
+        height: 72px;
+        margin-top: -5px;
+     }
+
+     .tour > img {
+        width: 335px;
+        height: 500px;
+     }
+
+     .tour-inform {
+        width: 303px;
+        height: 267px;
+        transform: translate(-5px);
+        margin-top: 120px;
+        
+     }
+
+
+     .tour {
+        margin-left: 10px;
+        margin-right: 10px;
+     }
+
+     .tour-info {
+        margin-left: 10px;
+        width: 303px;
+        height: 267px;
+        margin-top: 100px;
+        
+       
+     }
+
+     .tours-icon {
+        width: 218px;
+        height: 64px;
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        row-gap: 5px;
+        column-gap: 5px;
+        margin-top: -5px;
+     }
+
+     .info > p {
+        font-size: 12px;
+     }
+
+     .tours > h1 {
+        font-size: 20px;
+        margin-top: -25px;
+     }
+
+     .tours > p {
+        font-size: 12px;
+        width: 254px;
+        height: 48px;
+        margin-top:5px;
+     }
+
+     .check {
+        font-size: 16px;
+        margin-top: 30px;
+        margin-bottom: 5px;
+     }
+
+     .book {
+        font-size: 12px;
+        width: 130px;
+        height: 40px;
+        border-radius: 8px;
+        margin-top: -5px;
+     }
+
+
+
 
 
 
