--- a/style.css
+++ b/style.css
@@ -32,6 +32,9 @@ img {
 
     
 }
+.lists>li:hover {
+    font-size: 26px;
+}
 
 .lists > li {
     margin-right: 35px;
@@ -137,7 +140,7 @@ img {
 }
 
 
-.go , .date, .range {
+.country {
     width: 164px;
     height: 52px;
     background-color: #FFFFFF;
@@ -149,7 +152,7 @@ img {
     
 }
 
-.but-now {
+.find {
     background-color: #FF5400;
     border-radius: 12px;
     border: 2px solid #FF5400;
@@ -159,6 +162,11 @@ img {
     font-size: 16px;
     position: relative;
     z-index: -1;
+}
+
+.find > a {
+    color:#e7e7f0;
+    text-decoration: none;
 }
 
 .formal {
